test/Fail/PrimSeq.err
PrimSeq.agda:16.11-15: error: [UnequalTerms]
The terms
  primForce b not
and
  not b
are not equal at type Bool
when checking that the expression refl has type force b not ≡ not b
